idk/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: us.gcr.io/testkubecrt/clienthavebuild:v1

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP  
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
