idk/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: us.gcr.io/testkubecrt/fixserver:v1

---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP 
  selector:
    app: server
  ports:
    - port: 3001
      targetPort: 3001
